# Unsupervised-Labelling

./: .flake8  LICENSE  Makefile  README.md  main.py  pyproject.toml
assets/: flow.excalidraw
data/output/b4f6da50e1b2db16d90751a74c2ccda466c330976e45385181e02f3002c08a7e/: train_config.json
scripts/labelling/: __init__.py  labelling.py
scripts/topic_modelling/: train_topic_model.py
utils/: llm_utils.py  prompts.py  pydantic_models.py  utilities.py
