[project]
name = "topic-modeling"
version = "0.1.0"
description = "Unsupervised labelling using topic modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.16.4",
    "black>=25.1.0",
    "cachetools>=5.5.2",
    "datasets>=3.3.2",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "keybert>=0.9.0",
    "numba>=0.61.0",
    "openai>=1.65.4",
    "scikit-learn>=1.6.1",
    "tenacity>=9.0.0",
]
